# anything

./: CLAUDE.md  CMakeLists.txt  Dockerfile  FileContextMenu.cpp  FileContextMenu.h  FileDB.cpp  FileDB.h  FileResultTable.cpp  FileScanner.cpp  MainApp.cpp  MainApp.h  MainService.cpp  README.md  ScanObject.cpp  ScanObject.h  ScanThread.cpp  ScanThread.h  Utils.cpp  Utils.h  WebService.cpp  WebService.h  main.cpp
.github/workflows/: build.yml
client/: CMakeLists.txt  Defines.h  FileContextMenu.cpp  FileResultTable.cpp  FileResultTable.h  HighlightDelegate.cpp  HighlightDelegate.h  MainApp.cpp  MainApp.h  ScanObjDialog.cpp  ScanObjDialog.h  SingleInstanceApp.cpp  SingleInstanceApp.h  anything.qrc  main.cpp  stdafx.h
docker/: Dockerfile
server/: CMakeLists.txt  DBManager.cpp  DBManager.h  Defines.h  FileDB.cpp  FileDB.h  FileScanner.cpp  FileScanner.h  FileScannerManager.cpp  FileScannerManager.h  FileWatcher.cpp  FileWatcher.h  ScanObject.cpp  ScanObject.h  Utils.cpp  Utils.h  WebService.cpp  WebService.h  main.cpp  stdafx.h
server/audisp-anything-plugin/: Audisp.cpp  CMakeLists.txt
setup/: anything-file.service  anything.conf  com.anything-autostart.desktop  com.anything.desktop  postinst  postrm  preinst  prerm
